Now possible to create new products and upload an image for it

--- a/Project/Web.config
+++ b/Project/Web.config
@@ -14,12 +14,22 @@
   -->
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
-    <httpRuntime targetFramework="4.0" />
+    <httpRuntime targetFramework="4.0" maxRequestLength="52428800" />
+    <!--50MB-->
   </system.web>
 
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+
+  <system.webServer>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="52428800" />
+        <!--50MB-->
+      </requestFiltering>
+    </security>
+  </system.webServer>
   
   <!--
   <system.codedom>
