Fixade in Default tjoss i web.config

--- a/Project/Web.config
+++ b/Project/Web.config
@@ -23,6 +23,13 @@
   </appSettings>
 
   <system.webServer>
+    <defaultDocument>
+        <files>
+            <clear />
+            <add value="Default.aspx"/>
+        </files>
+    </defaultDocument>
+      
     <security>
       <requestFiltering>
         <requestLimits maxAllowedContentLength="52428800" />
